added simply feature to clear current note. Modified confirmation input display slightly

--- a/help/help.html
+++ b/help/help.html
@@ -23,7 +23,8 @@
 
     <div class="header">Commands</div>
     <p>@exit: exit Ouroboros</p>
-    <p>@curr: switch console over to the current note</p>
+    <p>@curr: switch console over to display the current note's content</p>
+    <p>@clear: erases the current note's content</p>
     <p>@list [grouping}: list all notes, under a certain grouping if included</p>
     <p>@drop note/[grouping}: remove notes and grouping of notes as specified. If nothing is specified remove all notes</p>
     <p>@save note/[grouping}: save the current note into the specified notes and grouping of notes</p>
